log-pilot-elk-yaml/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: kafkalocal
spec:
    ports:
        - protocol: TCP
          port: 9092
          targetPort: 9092
---
apiVersion: v1
kind: Endpoints
metadata:
    name: kafkalocal
subsets:
    - addresses:
        - ip: 172.21.0.3
      ports:
        - port: 9092
---
apiVersion: v1
kind: Service
metadata:
    name: zoolocal
spec:
    ports:
        - protocol: TCP
          port: 2181
          targetPort: 2181
---
apiVersion: v1
kind: Endpoints
metadata:
    name: zoolocal
subsets:
    - addresses:
        - ip: 172.21.0.3
      ports:
        - port: 2181
---
apiVersion: v1
kind: Service
metadata:
    name: schemalocal
spec:
    ports:
        - protocol: TCP
          port: 8081
          targetPort: 8081
---
apiVersion: v1
kind: Endpoints
metadata:
    name: schemalocal
subsets:
    - addresses:
        - ip: 172.21.0.3
      ports:
        - port: 8081
---
apiVersion: v1
kind: Service
metadata:
    name: i-g7h3d6qu 
spec:
    ports:
        - protocol: TCP
          port: 9092
          targetPort: 9092
---
apiVersion: v1
kind: Endpoints
metadata:
    name: i-g7h3d6qu 
subsets:
    - addresses:
        - ip: 172.21.0.3
      ports:
        - port: 9092
---
